<resources>
    <string name="app_name">Sportify - Admin</string>

    <!-- Add Product Screen -->
    <string name="add_images">Add images</string>
    <string name="add_image_directions">You can add up to 4 images</string>
    <string name="name">Name</string>
    <string name="original_price">Original Price</string>
    <string name="team">Team</string>
    <string name="sale">Sale</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="sub_category">Sub-Category</string>
    <string name="available_sizes">Available Sizes</string>
    <string name="small">Small</string>
    <string name="x_small">X-Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="x_large">X-Large</string>
    <string name="_0">0</string>
    <string name="available_colors">Available Colors</string>
    <string name="add_color">Add Color</string>
    <string name="add_product">Add Product</string>
    <string name="storage_permission_declined">Storage Permission Declined</string>
    <string name="choose_image_error">Error while choosing images</string>
    <string name="choose_color">Choose Color</string>
    <string name="error_empty_product_name">Please enter product name</string>
    <string name="error_empty_product_price">Please enter a valid price</string>
    <string name="error_empty_product_category">Please enter product category</string>
    <string name="error_empty_product_sub_category">Please enter product sub-category</string>
    <string name="error_empty_product_description">Please enter product description</string>
    <string name="error_invalid_sale">Sale value cannot be more than 100</string>
    <string name="error_empty_team">Please enter team for the sport</string>

    <!-- Add Equipment Screen -->
    <string name="sport">Sport</string>
    <string name="available_stock">Available Stock</string>
    <string name="stock">Stock</string>
    <string name="add_equipment">Add Equipment</string>
    <string name="error_empty_equipment_name">Please enter equipment name</string>
    <string name="error_empty_equipment_price">Please enter a valid price</string>
    <string name="error_empty_equipment_sport">Please enter a valid sport</string>
    <string name="clothing">Clothing</string>
    <string name="equipments">Equipments</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="filters">Filters</string>
    <string name="apply">Apply</string>
    <string name="empty_products_msg">No products available</string>
    <string name="empty_equipments_msg">No Equipments available</string>
    <string name="none">None</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit_product">Edit Product</string>
    <string name="edit_equipment">Edit Equipment</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>