<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_l"
            android:hint="@string/name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginTop="232dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:imeOptions="actionNext"
                android:inputType="none"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/price_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_l"
            android:hint="@string/original_price"
            app:layout_constraintTop_toBottomOf="@id/name_input"
            app:prefixText="$">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sale_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_l"
            android:hint="@string/sale"
            app:layout_constraintTop_toBottomOf="@id/price_input"
            app:suffixText="%">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sale_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="3"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_l"
            android:hint="@string/description"
            app:layout_constraintTop_toBottomOf="@id/sale_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:imeOptions="actionNext"
                android:inputType="text|textMultiLine"
                android:lines="4"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <TextView
            android:id="@+id/available_stock_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_l"
            android:text="@string/available_stock"
            android:textAppearance="?textAppearanceSubtitle2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_input" />

        <TextView
            android:id="@+id/stock_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_l"
            android:layout_marginLeft="@dimen/size_l"
            android:layout_marginTop="@dimen/size_m"
            android:text="@string/stock"
            android:textAppearance="?textAppearanceSubtitle1"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/stock_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/stock_input" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/stock_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_l"
            android:layout_marginLeft="@dimen/size_l"
            android:layout_marginTop="@dimen/size_m"
            app:boxBackgroundColor="@color/white"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toEndOf="@id/stock_label"
            app:layout_constraintTop_toBottomOf="@id/available_stock_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/stock_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:paddingTop="@dimen/size_l"
                android:text="@string/_0" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_equipment_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_l"
            android:text="@string/edit_equipment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stock_input" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>