<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/size_l">

    <TextView
        android:id="@+id/filters_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filters"
        android:textAppearance="?textAppearanceHeadline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/category_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_l"
        android:gravity="center"
        android:text="@string/category"
        android:textAppearance="?textAppearanceSubtitle2"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/sub_category_label"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filters_label" />

    <TextView
        android:id="@+id/sub_category_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sub_category"
        android:textAppearance="?textAppearanceSubtitle2"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/category_label"
        app:layout_constraintTop_toTopOf="@id/category_label" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/category_chooser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_s"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/category_label"
        app:layout_constraintStart_toStartOf="@id/category_label"
        app:layout_constraintTop_toBottomOf="@id/category_label" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/sub_category_chooser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/sub_category_label"
        app:layout_constraintStart_toStartOf="@id/sub_category_label"
        app:layout_constraintTop_toTopOf="@id/category_chooser" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_l"
        android:text="@string/apply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_chooser" />

</androidx.constraintlayout.widget.ConstraintLayout>